--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.22"
+    "faker": "^4.1.0",
+    "vue": "^2.5.22",
+    "vue-awesome": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
